modified:   Essay-Template1.tex

--- a/Essay-Template1.tex
+++ b/Essay-Template1.tex
@@ -15,7 +15,7 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
 \begin{document}
 \pagecolor{Gray!20!Bittersweet!10}
 %Coverletter
-\begin{cv}{\spacedallcaps{Title}}
+\begin{cv}{\spacedallcaps{Spiritual Perspectives}}
         \begin{cvlist}{\textcolor{brown}{\spacedlowsmallcaps{Jason~N~Mansfield}}}\label{PersDat}  
             \item   Regis University
             \item   3333\\
@@ -40,7 +40,7 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
 \textcolor{brown}{Quoted article}~\cite{key here}
 \clearpage
 %Title
-\title{\textcolor{Maroon}{\rmfamily\normalfont\spacedallcaps{Title again}}}
+\title{\textcolor{Maroon}{\rmfamily\normalfont\spacedallcaps{Spiritual Perspectives}}}
     \author{\textcolor{brown}{\spacedlowsmallcaps{Jason N Mansfield}}}
     \date{} % no date
     
@@ -54,16 +54,39 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
     
     \section{Judaism}
     \subsection{Abraham Isaac Kook}
+     \subsubsection{Spiritual perspectives}
+     \subsubsection{Similarities}
+     \subsubsection{Differences}
     \section{Christianity}
     \subsection{Thomas A. Kempis}
+\subsubsection{Spiritual perspectives}
+     \subsubsection{Similarities}
+     \subsubsection{Differences}
     \section{Hinduism}
     \subsection{Kabir}
+    \subsubsection{Spiritual perspectives}
+     \subsubsection{Similarities}
+     \subsubsection{Differences}
     \section{Buddhism}
     \subsection{Sutta Nipata}
+\subsubsection{Spiritual perspectives}
+     \subsubsection{Similarities}
+     \subsubsection{Differences}
     \section{Surfism}
     \subsection{Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i} }
-
+\subsubsection{Spiritual perspectives}
+     \subsubsection{Similarities}
+     \subsubsection{Differences}
+     \section{Native American Shamanism}
+     \subsection{Great Spirit}
+     \subsubsection{Spiritual perspectives}
+     The Great Spirit~\cite{wiki:001} or Great Maker is defined differently amongst American Indian tribes. All appear to believe in some entity which is critical to this existence in some form or another.
+     \subsubsection{Similarities}
+     Most Tribes describe this Maker as a personal being who is essential to the existence of this reality. This is similar to the  concept of YAHWEH in Christianity. Similar also is the fact that Native Indians look at their God as a teacher.
+     \subsubsection{Differences}
+   
   % bib stuff
+\clearpage
     \nocite{*}
     \addtocontents{toc}{\protect\vspace{\beforebibskip}}
     \addcontentsline{toc}{section}{\refname}    
