modified:   Essay-Template1.tex

--- a/Essay-Template1.tex
+++ b/Essay-Template1.tex
@@ -7,6 +7,7 @@
 \usepackage{tikz}
 \usepackage{amsthm}
 \usepackage{setspace}
+\usepackage[round]{natbib}
 \usetikzlibrary{calc,shapes,arrows,automata,trees,shadows,decorations.pathmorphing,positioning,
 shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrounds}
 \renewcommand*{\cvheadingfont}{\LARGE\color{Maroon}}
@@ -15,9 +16,9 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
 \begin{document}
 \pagecolor{Gray!20!Bittersweet!10}
 %Coverletter
-\begin{cv}{\spacedallcaps{Spiritual Perspectives}}
+\begin{cv}{\spacedallcaps{Spiritual~Perspectives}}
         \begin{cvlist}{\textcolor{brown}{\spacedlowsmallcaps{Jason~N~Mansfield}}}\label{PersDat}  
-            \item   Regis University
+            \item   Regis~University
             \item   3333\\
                     Regis Boulevard Denver \\	
                     Colorado 80221-1099
@@ -32,12 +33,19 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
 \clearpage
 
 \noindent
-\textcolor{Maroon}{\spacedallcaps{The quoted article title}}\\
-\textcolor{brown}{\spacedlowsmallcaps{paragraph or whatever}}
+\textcolor{Maroon}{\spacedallcaps{Four Things That Bring Much Inward Peace}}\\
+\textcolor{brown}{\spacedlowsmallcaps{Thomas A Kempis}}
 \begin{verse}
-
+My child, now will I teach thee the way of peace and true liberty.\\
+O Lord, I beseech thee, do as thou sayest, for this is delightful for me to hear.\\
+Be desirous, my child, to work for the welfare of another rather than seek thine own will.\\
+Choose always to have less rather than more.\\
+Seek always the lowest place, and to be inferior to everyone.\\
+Wish always, and pray, that the will of God may be wholly fulfilled in thee.\\
+Behold, such a man entereth within the borders of peace and rest.\\
+O Lord, this short discourse of thine containeth within itself much perfection. It is little to be spoken, but full of meaning, and abundant in fruit. . . . Thou who canst do all things, and ever lovest the profiting of my soul, increase in me thy grace, that I may be able to fulfill thy words, and to work out mine own salvation.
 \end{verse}
-\textcolor{brown}{Quoted article}~\cite{key here}
+\textcolor{brown}{\citealp[pg. 199]{eknath}}
 \clearpage
 %Title
 \title{\textcolor{Maroon}{\rmfamily\normalfont\spacedallcaps{Spiritual Perspectives}}}
@@ -55,32 +63,48 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
     \section{Judaism}
     \subsection{Abraham Isaac Kook}
      \subsubsection{Spiritual perspectives}
+     Rabbi Abraham Isaac Kook's poem, ``Radiant Is the Wold Soul" ~\citealp[pg. 39]{eknath} talks about the radiance and majesty of the world through God.
      \subsubsection{Similarities}
+    The Rabbi speaks of the warmth or radiance of God. This is similar to the description given by the American Indians for the Great Spirit~\citealp[pg. 186]{eknath}.
      \subsubsection{Differences}
     \section{Christianity}
     \subsection{Thomas A. Kempis}
 \subsubsection{Spiritual perspectives}
+ Thomas A. Kempis talks about living a meek lifestyle not weighed down but needs for importance and looking out for others welfare in his poem, ``Four Things That Bring Much Inward Peace"~\citealp[pg. 199]{eknath}.
      \subsubsection{Similarities}
      \subsubsection{Differences}
     \section{Hinduism}
     \subsection{Kabir}
     \subsubsection{Spiritual perspectives}
+    Kabir describes how God is within us all but reveals himself in Saints in ``The Temple of the Lord" \citealp[pg. 40-41]{eknath}. 
      \subsubsection{Similarities}
      \subsubsection{Differences}
     \section{Buddhism}
-    \subsection{Sutta Nipata}
+    \subsection{Sutta Nipata}   
 \subsubsection{Spiritual perspectives}
+ The Sutta Nipata clearly describes a place of enjoyment and rest for those in troubled times or passed on ~\citealp[pg. 200]{eknath}:
+\begin{quote}
+For those struggling in midstream, in great fear of the flood, of growing old and of dying – for all those I say, an island exists where there is no place for impediments, no place for clinging: the island of no going beyond.
+I call it nirvana, the complete destruction of old age and dying.
+\end{quote}
      \subsubsection{Similarities}
+     Nirvana seems similar to what Christians may think of when envisioning heaven.
      \subsubsection{Differences}
     \section{Surfism}
     \subsection{Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i} }
 \subsubsection{Spiritual perspectives}
+Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i} delivers a powerful poem describing reincarnation. ``A Garden beyond Paradise" discusses the various changes souls go through ~\citealp[pg. 246-247]{eknath}.
      \subsubsection{Similarities}
+    This authors outlook shows similarities with The Sutta Nipata~\citealp[pg. 200]{eknath}: as it appears souls enter a nirvana like status once leaving its fleshly boundaries. 
      \subsubsection{Differences}
+   This is Unlike Rabbi Abraham Isaac Kook's descriptive poem~\citealp[pg. 39]{eknath} which attributes a pleasurable lifestyle to closeness with God.
      \section{Native American Shamanism}
      \subsection{Great Spirit}
      \subsubsection{Spiritual perspectives}
-     The Great Spirit~\cite{wiki:001} or Great Maker is defined differently amongst American Indian tribes. All appear to believe in some entity which is critical to this existence in some form or another.
+     The Great Spirit or Great Maker is defined differently amongst American Indian tribes. All appear to believe in some entity which is critical to this existence in some form or another. The Native American Poem, ``Great Life-Giving Spirit" is quoted by Author ~\citealp[pg. 186]{eknath}:
+\begin{quote}
+ Great Spirit of creation, send me the warm and soothing winds from the South.
+\end{quote}
      \subsubsection{Similarities}
      Most Tribes describe this Maker as a personal being who is essential to the existence of this reality. This is similar to the  concept of YAHWEH in Christianity. Similar also is the fact that Native Indians look at their God as a teacher.
      \subsubsection{Differences}
@@ -90,6 +114,6 @@ shapes.misc,shapes.arrows,chains,matrix,scopes,decorations.pathmorphing,backgrou
     \nocite{*}
     \addtocontents{toc}{\protect\vspace{\beforebibskip}}
     \addcontentsline{toc}{section}{\refname}    
-    \bibliographystyle{plain}
+    \bibliographystyle{plainnat}
     \bibliography{cite}
 \end{document}
