--- a/cite.bib
+++ b/cite.bib
@@ -1,7 +1,8 @@
-@misc{ wiki:001,
-   author = "Wikipedia",
-   title = "Great Spirit --- Wikipedia{,} The Free Encyclopedia",
-   year = "2011",
-   url = "\url{//en.wikipedia.org/w/index.php?title=Great_Spirit&oldid=441892534}",
-   note = "[Online; accessed 26-September-2011]"
+@Book{eknath,
+ author = {Eknath, Easwaran},
+ title = {God makes the rivers to flow},
+ publisher = {Nilgiri Press},
+ year = {2009},
+ address = {Tomales, Calif},
+ isbn = {9781586380380}
  }
