modified:   Essay-Template1.tex

--- a/Essay-Template1.tex
+++ b/Essay-Template1.tex
@@ -67,18 +67,23 @@ O Lord, this short discourse of thine containeth within itself much perfection. 
      \subsubsection{Similarities}
     The Rabbi speaks of the warmth or radiance of God. This is similar to the description given by the American Indians for the Great Spirit~\citealp[pg. 186]{eknath}.
      \subsubsection{Differences}
+   Unlike the theory of Nirvana defined in the Sutta Nipata~\citealp[pg. 200]{eknath} the Rabbi points out tranquility may be found while still flesh and here on earth.
     \section{Christianity}
     \subsection{Thomas A. Kempis}
 \subsubsection{Spiritual perspectives}
  Thomas A. Kempis talks about living a meek lifestyle not weighed down but needs for importance and looking out for others welfare in his poem, ``Four Things That Bring Much Inward Peace"~\citealp[pg. 199]{eknath}.
      \subsubsection{Similarities}
+Similar to Rabbi Abraham Isaac Kook's poem, ``Radiant Is the Wold Soul" ~\citealp[pg. 39]{eknath} Thomas A. Kempis describes works that truly provide meaning to the follower.
      \subsubsection{Differences}
+Unlike Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i}'s ~\citealp[pg. 246-247]{eknath} vision of leaving the human body and become a powerful ocean Rabbi Abraham Isaac Kook focuses on seeking meekness. 
     \section{Hinduism}
     \subsection{Kabir}
     \subsubsection{Spiritual perspectives}
-    Kabir describes how God is within us all but reveals himself in Saints in ``The Temple of the Lord" \citealp[pg. 40-41]{eknath}. 
+    Kabir describes how God is within us all but reveals himself in Saints in ``The Temple of the Lord" ~\citealp[pg. 40-41]{eknath}. 
      \subsubsection{Similarities}
+    Thomas A. Kempis ~\citealp[pg. 199]{eknath} describes seeking meekness so its seems similar as a Saint might also seek meekness.
      \subsubsection{Differences}
+   Unlike the Native American's belief's God is shown through men as opposed to nature~\citealp[pg. 186]{eknath}. 
     \section{Buddhism}
     \subsection{Sutta Nipata}   
 \subsubsection{Spiritual perspectives}
@@ -90,6 +95,7 @@ I call it nirvana, the complete destruction of old age and dying.
      \subsubsection{Similarities}
      Nirvana seems similar to what Christians may think of when envisioning heaven.
      \subsubsection{Differences}
+     The American Indians believed that a form of great pleasure can be found in nature while here on earth~\citealp[pg. 186]{eknath}. The American Indian's belief does not indicate a need for the release from the human body for this pleasurable state. 
     \section{Surfism}
     \subsection{Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i} }
 \subsubsection{Spiritual perspectives}
@@ -108,7 +114,7 @@ Jal\={a}l ad-D\={i}n Muḥammad R\={u}m\={i} delivers a powerful poem describing
      \subsubsection{Similarities}
      Most Tribes describe this Maker as a personal being who is essential to the existence of this reality. This is similar to the  concept of YAHWEH in Christianity. Similar also is the fact that Native Indians look at their God as a teacher.
      \subsubsection{Differences}
-   
+   You might be able to state that this is different than Kabir's~\citealp[pg. 40-41]{eknath} interpretation of God being shown through Saints as opposed to Nature as the Native Americans purpose. Its possible however that Kabir would agree God is also shown through Nature. 
   % bib stuff
 \clearpage
     \nocite{*}
