--- a/cite.bib
+++ b/cite.bib
@@ -6,3 +6,13 @@
  address = {Tomales, Calif},
  isbn = {9781586380380}
  }
+
+@webpage{native,
+	Author = {Chief Seattle},
+	Date-Added = {2011-10-02 20:04:48 +0000},
+	Date-Modified = {2011-10-02 20:07:09 +0000},
+	Keywords = {Native American Prayers},
+	Month = {October},
+	Title = {Prayer To The Four Directions},
+	Url = {http://www.starstuffs.com/prayers/fourdirections.html},
+	Year = {2011}}
